[package]
name = "wasefire-scheduler"
version = "0.5.0-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Wasefire scheduler"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
build = "src/build.rs"
keywords = ["embedded", "framework", "no-std", "wasm"]
categories = ["embedded", "no-std", "wasm"]

[package.metadata.docs.rs]
features = ["std", "wasm"]

[dependencies]
bytemuck = { version = "1.23.1", default-features = false, optional = true }
defmt = { version = "1.0.1", default-features = false, optional = true }
derive-where = { version = "1.5.0", default-features = false, features = ["nightly"] }
digest = { version = "0.10.7", default-features = false, features = ["mac"], optional = true }
generic-array = { version = "=0.14.7", default-features = false, optional = true }
typenum = { version = "1.18.0", default-features = false, optional = true }
wasefire-applet-api = { version = "0.8.0-git", path = "../api", features = ["host"] }
wasefire-board-api = { version = "0.9.0-git", path = "../board" }
wasefire-common = { version = "0.1.0-git", path = "../common", optional = true }
wasefire-error = { version = "0.1.3-git", path = "../error" }
wasefire-logger = { version = "0.2.0-git", path = "../logger" }
wasefire-one-of = { version = "0.1.1-git", path = "../one-of" }
wasefire-protocol = { version = "0.3.0-git", path = "../protocol", features = ["device"] }
wasefire-store = { version = "0.3.1-git", path = "../store", optional = true }
wasefire-sync = { version = "0.1.2-git", path = "../sync", optional = true }

[dependencies.wasefire-interpreter]
version = "0.4.0-git"
path = "../interpreter"
features = ["toctou"]
optional = true

[features]
std = ["wasefire-board-api/std", "wasefire-store?/std"]
# Logging features (enable at most one).
defmt = [
  "dep:defmt",
  "internal-debug",
  "wasefire-board-api/defmt",
  "wasefire-error/defmt",
  "wasefire-logger/defmt",
]
log = ["internal-debug", "wasefire-board-api/log", "wasefire-logger/log"]
# Applet API features (automatically enabled by board API features).
applet-api-button = ["wasefire-applet-api/api-button"]
applet-api-clock = ["wasefire-applet-api/api-clock"]
applet-api-crypto-cbc = ["internal-applet-api-crypto", "wasefire-applet-api/api-crypto-cbc"]
applet-api-crypto-ccm = ["internal-applet-api-crypto", "wasefire-applet-api/api-crypto-ccm"]
applet-api-crypto-ec = ["internal-applet-api-crypto", "wasefire-applet-api/api-crypto-ec"]
applet-api-crypto-ecdh = ["internal-applet-api-crypto", "wasefire-applet-api/api-crypto-ecdh"]
applet-api-crypto-ecdsa = ["internal-applet-api-crypto", "wasefire-applet-api/api-crypto-ecdsa"]
applet-api-crypto-ed25519 = ["internal-applet-api-crypto", "wasefire-applet-api/api-crypto-ed25519"]
applet-api-crypto-gcm = ["internal-applet-api-crypto", "wasefire-applet-api/api-crypto-gcm"]
applet-api-crypto-hash = [
  "internal-applet-api-crypto-hash",
  "internal-hash-context",
  "wasefire-applet-api/api-crypto-hash",
]
applet-api-crypto-hkdf = ["internal-applet-api-crypto-hash", "wasefire-applet-api/api-crypto-hkdf"]
applet-api-crypto-hmac = [
  "internal-applet-api-crypto-hash",
  "internal-hash-context",
  "wasefire-applet-api/api-crypto-hmac",
]
applet-api-fingerprint-matcher = [
  "internal-applet-api-fingerprint",
  "wasefire-applet-api/api-fingerprint-matcher",
]
applet-api-fingerprint-sensor = [
  "internal-applet-api-fingerprint",
  "wasefire-applet-api/api-fingerprint-sensor",
]
applet-api-gpio = ["wasefire-applet-api/api-gpio"]
applet-api-led = ["wasefire-applet-api/api-led"]
applet-api-platform = [
  "dep:wasefire-common",
  "internal-applet-api-platform",
  "wasefire-applet-api/api-platform",
]
applet-api-platform-protocol = [
  "internal-applet-api-platform",
  "wasefire-applet-api/api-platform-protocol",
]
applet-api-platform-update = [
  "internal-applet-api-platform",
  "wasefire-applet-api/api-platform-update",
]
applet-api-rng = ["wasefire-applet-api/api-rng"]
applet-api-store = ["internal-applet-api-store", "wasefire-applet-api/api-store"]
applet-api-store-fragment = ["internal-applet-api-store", "wasefire-applet-api/api-store-fragment"]
applet-api-timer = ["wasefire-applet-api/api-timer"]
applet-api-uart = ["wasefire-applet-api/api-uart"]
applet-api-usb-ctap = ["internal-applet-api-usb", "wasefire-applet-api/api-usb-ctap"]
applet-api-usb-serial = ["internal-applet-api-usb", "wasefire-applet-api/api-usb-serial"]
applet-api-vendor = ["wasefire-applet-api/api-vendor"]
# Board API features. Enabling a board API feature automatically enables all
# applet API features that would be implemented.
board-api-button = ["applet-api-button", "wasefire-board-api/api-button"]
board-api-clock = ["applet-api-clock", "wasefire-board-api/api-clock"]
board-api-crypto-aes128-ccm = [
  "applet-api-crypto-ccm",
  "dep:typenum",
  "wasefire-board-api/api-crypto-aes128-ccm",
]
board-api-crypto-aes256-cbc = ["applet-api-crypto-cbc", "wasefire-board-api/api-crypto-aes256-cbc"]
board-api-crypto-aes256-gcm = [
  "applet-api-crypto-gcm",
  "dep:typenum",
  "wasefire-board-api/api-crypto-aes256-gcm",
]
board-api-crypto-ed25519 = ["applet-api-crypto-ed25519", "wasefire-board-api/api-crypto-ed25519"]
board-api-crypto-hmac-sha256 = [
  "applet-api-crypto-hkdf",
  "applet-api-crypto-hmac",
  "wasefire-board-api/api-crypto-hmac-sha256",
]
board-api-crypto-hmac-sha384 = [
  "applet-api-crypto-hkdf",
  "applet-api-crypto-hmac",
  "wasefire-board-api/api-crypto-hmac-sha384",
]
board-api-crypto-p256 = [
  "applet-api-crypto-ec",
  "internal-board-api-crypto-ecc",
  "wasefire-board-api/api-crypto-p256",
]
board-api-crypto-p256-ecdh = [
  "applet-api-crypto-ecdh",
  "internal-board-api-crypto-ecdh",
  "wasefire-board-api/api-crypto-p256-ecdh",
]
board-api-crypto-p256-ecdsa = [
  "applet-api-crypto-ecdsa",
  "internal-board-api-crypto-ecdsa",
  "wasefire-board-api/api-crypto-p256-ecdsa",
]
board-api-crypto-p384 = [
  "applet-api-crypto-ec",
  "generic-array/more_lengths",
  "internal-board-api-crypto-ecc",
  "wasefire-board-api/api-crypto-p384",
]
board-api-crypto-p384-ecdh = [
  "applet-api-crypto-ecdh",
  "generic-array/more_lengths",
  "internal-board-api-crypto-ecdh",
  "wasefire-board-api/api-crypto-p384-ecdh",
]
board-api-crypto-p384-ecdsa = [
  "applet-api-crypto-ecdsa",
  "generic-array/more_lengths",
  "internal-board-api-crypto-ecdsa",
  "wasefire-board-api/api-crypto-p384-ecdsa",
]
board-api-crypto-sha256 = ["applet-api-crypto-hash", "wasefire-board-api/api-crypto-sha256"]
board-api-crypto-sha384 = ["applet-api-crypto-hash", "wasefire-board-api/api-crypto-sha384"]
board-api-fingerprint-matcher = [
  "applet-api-fingerprint-matcher",
  "internal-board-api-fingerprint",
  "wasefire-board-api/api-fingerprint-matcher",
]
board-api-fingerprint-sensor = [
  "applet-api-fingerprint-sensor",
  "internal-board-api-fingerprint",
  "wasefire-board-api/api-fingerprint-sensor",
]
board-api-gpio = ["applet-api-gpio", "dep:bytemuck", "wasefire-board-api/api-gpio"]
board-api-led = ["applet-api-led", "wasefire-board-api/api-led"]
board-api-rng = ["applet-api-rng", "wasefire-board-api/api-rng"]
board-api-storage = [
  "applet-api-store",
  "applet-api-store-fragment",
  "dep:bytemuck",
  "dep:wasefire-store",
  "wasefire-board-api/api-storage",
]
board-api-timer = ["applet-api-timer", "wasefire-board-api/api-timer"]
board-api-uart = ["applet-api-uart", "wasefire-board-api/api-uart"]
board-api-usb-ctap = [
  "applet-api-usb-ctap",
  "internal-board-api-usb",
  "wasefire-board-api/api-usb-ctap",
]
board-api-usb-serial = [
  "applet-api-usb-serial",
  "internal-board-api-usb",
  "wasefire-board-api/api-usb-serial",
]
board-api-vendor = ["applet-api-vendor", "wasefire-board-api/api-vendor"]
# Enables all API features (unstable).
full-api = ["full-applet-api", "full-board-api"]
# Enables all applet API features (unstable).
full-applet-api = [
  "applet-api-button",
  "applet-api-clock",
  "applet-api-crypto-cbc",
  "applet-api-crypto-ccm",
  "applet-api-crypto-ec",
  "applet-api-crypto-ecdh",
  "applet-api-crypto-ecdsa",
  "applet-api-crypto-ed25519",
  "applet-api-crypto-gcm",
  "applet-api-crypto-hash",
  "applet-api-crypto-hkdf",
  "applet-api-crypto-hmac",
  "applet-api-fingerprint-matcher",
  "applet-api-fingerprint-sensor",
  "applet-api-gpio",
  "applet-api-led",
  "applet-api-platform",
  "applet-api-platform-protocol",
  "applet-api-platform-update",
  "applet-api-rng",
  "applet-api-store",
  "applet-api-store-fragment",
  "applet-api-timer",
  "applet-api-uart",
  "applet-api-usb-ctap",
  "applet-api-usb-serial",
  "applet-api-vendor",
]
# Enables all board API features (unstable).
full-board-api = [
  "board-api-button",
  "board-api-clock",
  "board-api-crypto-aes128-ccm",
  "board-api-crypto-aes256-cbc",
  "board-api-crypto-aes256-gcm",
  "board-api-crypto-ed25519",
  "board-api-crypto-hmac-sha256",
  "board-api-crypto-hmac-sha384",
  "board-api-crypto-p256",
  "board-api-crypto-p256-ecdh",
  "board-api-crypto-p256-ecdsa",
  "board-api-crypto-p384",
  "board-api-crypto-p384-ecdh",
  "board-api-crypto-p384-ecdsa",
  "board-api-crypto-sha256",
  "board-api-crypto-sha384",
  "board-api-fingerprint-matcher",
  "board-api-fingerprint-sensor",
  "board-api-gpio",
  "board-api-led",
  "board-api-rng",
  "board-api-storage",
  "board-api-timer",
  "board-api-uart",
  "board-api-usb-ctap",
  "board-api-usb-serial",
  "board-api-vendor",
]
# Software crypto features. Enabling a software crypto feature automatically
# enables its board API feature.
software-crypto-aes128-ccm = [
  "board-api-crypto-aes128-ccm",
  "wasefire-board-api/software-crypto-aes128-ccm",
]
software-crypto-aes256-cbc = [
  "board-api-crypto-aes256-cbc",
  "wasefire-board-api/software-crypto-aes256-cbc",
]
software-crypto-aes256-gcm = [
  "board-api-crypto-aes256-gcm",
  "wasefire-board-api/software-crypto-aes256-gcm",
]
software-crypto-ed25519 = ["board-api-crypto-ed25519", "wasefire-board-api/software-crypto-ed25519"]
software-crypto-hmac-sha256 = [
  "board-api-crypto-hmac-sha256",
  "wasefire-board-api/software-crypto-hmac-sha256",
]
software-crypto-hmac-sha384 = [
  "board-api-crypto-hmac-sha384",
  "wasefire-board-api/software-crypto-hmac-sha384",
]
software-crypto-p256 = ["board-api-crypto-p256", "wasefire-board-api/software-crypto-p256"]
software-crypto-p256-ecdh = [
  "board-api-crypto-p256-ecdh",
  "wasefire-board-api/software-crypto-p256-ecdh",
]
software-crypto-p256-ecdsa = [
  "board-api-crypto-p256-ecdsa",
  "wasefire-board-api/software-crypto-p256-ecdsa",
]
software-crypto-p384 = ["board-api-crypto-p384", "wasefire-board-api/software-crypto-p384"]
software-crypto-p384-ecdh = [
  "board-api-crypto-p384-ecdh",
  "wasefire-board-api/software-crypto-p384-ecdh",
]
software-crypto-p384-ecdsa = [
  "board-api-crypto-p384-ecdsa",
  "wasefire-board-api/software-crypto-p384-ecdsa",
]
software-crypto-sha256 = ["board-api-crypto-sha256", "wasefire-board-api/software-crypto-sha256"]
software-crypto-sha384 = ["board-api-crypto-sha384", "wasefire-board-api/software-crypto-sha384"]
# Selects between Wasm applet or native applet (choose exactly one).
native = ["dep:wasefire-sync"]
wasm = ["dep:wasefire-interpreter"]
# Assume WASM modules being loaded are valid and do not validate them. This is a
# safety invariant.
unsafe-skip-validation = []
# Internal features.
_test = ["wasefire-protocol/_exhaustive"]
internal-applet-api-crypto = []
internal-applet-api-crypto-hash = ["dep:digest", "dep:generic-array", "internal-applet-api-crypto"]
internal-applet-api-fingerprint = []
internal-applet-api-platform = []
internal-applet-api-store = []
internal-applet-api-usb = []
internal-board-api-crypto-ecc = []
internal-board-api-crypto-ecdh = []
internal-board-api-crypto-ecdsa = []
internal-board-api-fingerprint = []
internal-board-api-usb = []
internal-debug = ["dep:bytemuck"]
internal-hash-context = []

[lints]
clippy.literal-string-with-formatting-args = "allow"
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unused-crate-dependencies = "warn"
