[package]
name = "wasefire-store"
version = "0.3.1-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2021"
description = "Key-value store for SLC flash storage"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "no-std"]
categories = ["embedded", "no-std"]

[package.metadata.docs.rs]
features = ["std"]

[dependencies]
wasefire-error = { version = "0.1.2", path = "../error" }

[dev-dependencies]
tempfile = "3.10.1"

[features]
std = ["wasefire-error/std"]

[lints]
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unsafe-op-in-unsafe-fn = "warn"
rust.unused-crate-dependencies = "warn"
