[package]
name = "wasefire-store"
version = "0.3.1"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Key-value store for SLC flash storage"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "no-std"]
categories = ["embedded", "no-std"]

[package.metadata.docs.rs]
features = ["std"]

[dependencies]
wasefire-error = { version = "0.1.3", path = "../error" }

[dev-dependencies]
tempfile = "3.21.0"

[features]
std = ["wasefire-error/std"]

[lints]
clippy.literal-string-with-formatting-args = "allow"
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
