[package]
name = "wasefire-store"
version = "0.3.2-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Key-value store for SLC flash storage"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "no-std"]
categories = ["embedded", "no-std"]

[package.metadata.docs.rs]
features = ["std"]

[dependencies]
wasefire-error = { version = "0.1.4-git", path = "../error" }

[dev-dependencies]
tempfile = "3.24.0"

[features]
std = ["wasefire-error/std"]

[lints]
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
