[package]
name = "wasefire-stub"
version = "0.1.0-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2021"
description = "Stubs for the Wasefire applet API"
repository = "https://github.com/google/wasefire"
include = ["/src"]
keywords = ["framework"]
categories = []

[dependencies]
crypto-common = { version = "0.1.6", default-features = false }
digest = { version = "0.10.6", default-features = false, features = ["mac"] }
ecdsa = { version = "0.16.7", default-features = false, features = ["signing"] }
elliptic-curve = { version = "0.13.5", default-features = false }
generic-array = { version = "0.14.7", default-features = false }
hkdf = { version = "0.12.3", default-features = false }
hmac = { version = "0.12.1", default-features = false }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }
p384 = { version = "0.13.0", default-features = false, features = ["ecdsa"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
sha2 = { version = "0.10.6", default-features = false }
signature = { version = "2.1.0", default-features = false }
wasefire-applet-api = { version = "0.3.0-git", path = "../api", features = ["native", "wasm"] }
