[package]
name = "wasefire-stub"
version = "0.1.6-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Stubs for the Wasefire applet API"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["framework"]
categories = []

[dependencies]
crypto-common = { version = "0.1.6", default-features = false }
digest = { version = "0.10.7", default-features = false, features = ["mac"] }
ecdsa = { version = "0.16.9", default-features = false, features = ["signing"] }
elliptic-curve = { version = "0.13.8", default-features = false }
hkdf = { version = "0.12.4", default-features = false }
hmac = { version = "0.12.1", default-features = false }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }
p384 = { version = "0.13.0", default-features = false, features = ["ecdsa"] }
rand = { version = "0.9.0", default-features = false, features = ["thread_rng"] }
sha2 = { version = "0.10.8", default-features = false }
signature = { version = "2.2.0", default-features = false }
wasefire-error = { version = "0.1.3-git", path = "../error" }
wasefire-logger = { version = "0.1.7-git", path = "../logger" }

[dependencies.wasefire-applet-api]
features = ["full-api", "native", "wasm"]
version = "0.8.0-git"
path = "../api"

[lints]
clippy.literal-string-with-formatting-args = "allow"
clippy.mod-module-files = "warn"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
