[package]
name = "wasefire-sync"
version = "0.1.1-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2021"
description = "Portable non-blocking mutex"
repository = "https://github.com/google/wasefire"
include = ["/src"]
keywords = ["framework", "mutex", "no-std"]
categories = ["concurrency", "no-std"]

[dependencies]
portable-atomic = { version = "1.6.0", default-features = false }

[dependencies.spin]
version = "0.9.8"
default-features = false
features = ["lazy", "portable_atomic", "spin_mutex"]

[features]
unsafe-assume-single-core = ["portable-atomic/unsafe-assume-single-core"]

[lints]
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unsafe-op-in-unsafe-fn = "warn"
rust.unused-crate-dependencies = "warn"
