[package]
name = "wasefire-sync"
version = "0.1.2"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Portable non-blocking mutex"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["framework", "mutex", "no-std"]
categories = ["concurrency", "no-std"]

[dependencies]
portable-atomic = { version = "1.11.1", default-features = false }

[dependencies.spin]
version = "0.10.0"
default-features = false
features = ["lazy", "once", "portable_atomic", "spin_mutex"]

[features]
unsafe-assume-single-core = ["portable-atomic/unsafe-assume-single-core"]

[lints]
clippy.literal-string-with-formatting-args = "allow"
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
