[package]
name = "wasm-bench"
version = "0.1.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"], optional = true }
cortex-m-rt = { version = "0.7.3", optional = true }
embedded-alloc = { version = "0.6.0", optional = true }
nrf52840-hal = { version = "0.18.0", optional = true }
panic-rtt-target = { version = "0.2.0", optional = true }
riscv = { version = "0.12.1", features = ["critical-section-single-hart"], optional = true }
riscv-rt = { version = "0.13.0", optional = true }
rtt-target = { version = "0.6.1", optional = true }
wasefire-interpreter = { path = "../interpreter", features = ["float-types"], optional = true }
wasmi = { version = "0.40.0", default-features = false, optional = true }

[dependencies.portable-atomic]
version = "1.6.0"
default-features = false
features = ["critical-section"]
optional = true

[dependencies.wasm3]
git = "https://github.com/wasm3/wasm3-rs.git"
default-features = false
features = ["build-bindgen", "use-32bit-slots"]
optional = true

[dependencies.wasmtime]
version = "27.0.0"
default-features = false
features = ["cranelift", "runtime"]
optional = true

[features]
runtime-base = ["dep:wasefire-interpreter"]
runtime-wasm3 = ["dep:wasm3"]
runtime-wasmi = ["dep:wasmi"]
runtime-wasmtime = ["dep:wasmtime"]
target-linux = []
target-nordic = [
  "dep:cortex-m",
  "dep:cortex-m-rt",
  "dep:embedded-alloc",
  "dep:nrf52840-hal",
  "dep:panic-rtt-target",
  "dep:rtt-target",
]
target-riscv = ["dep:embedded-alloc", "dep:portable-atomic", "dep:riscv", "dep:riscv-rt"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[lints]
clippy.mod-module-files = "warn"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unsafe-op-in-unsafe-fn = "warn"
rust.unused-crate-dependencies = "warn"
