[package]
name = "wasm-bench"
version = "0.1.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"], optional = true }
cortex-m-rt = { version = "0.7.5", optional = true }
embedded-alloc = { version = "0.6.0", optional = true }
nrf52840-hal = { version = "0.18.0", optional = true }
panic-rtt-target = { version = "0.2.0", optional = true }
riscv = { version = "0.14.0", features = ["critical-section-single-hart"], optional = true }
riscv-rt = { version = "0.15.0", optional = true }
rtt-target = { version = "0.6.1", optional = true }
wasmi = { version = "0.47.0", default-features = false, optional = true }

[dependencies.portable-atomic]
version = "1.11.1"
default-features = false
features = ["critical-section"]
optional = true

[dependencies.wasmtime]
version = "34.0.2"
default-features = false
features = ["runtime"]
optional = true

[dependencies.wasefire-interpreter]
path = "../interpreter"
features = ["float-types"]
optional = true

[build-dependencies.wasmtime]
version = "34.0.2"
default-features = false
features = ["cranelift", "pulley"]
optional = true

[build-dependencies.wasefire-interpreter]
path = "../interpreter"
features = ["float-types"]
optional = true

[features]
_target-embedded = ["dep:embedded-alloc", "wasmtime?/pulley"]
runtime-base = ["dep:wasefire-interpreter"]
runtime-wasmi = ["dep:wasmi"]
runtime-wasmtime = ["dep:wasmtime"]
target-linux = ["wasmtime?/cranelift"]
target-nordic = [
  "_target-embedded",
  "dep:cortex-m",
  "dep:cortex-m-rt",
  "dep:nrf52840-hal",
  "dep:panic-rtt-target",
  "dep:rtt-target",
]
target-riscv = ["_target-embedded", "dep:portable-atomic", "dep:riscv", "dep:riscv-rt"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.release-size]
inherits = "release"
opt-level = "z"

[lints]
clippy.literal-string-with-formatting-args = "allow"
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
