[package]
name = "wasm-bench"
version = "0.1.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"], optional = true }
cortex-m-rt = { version = "0.7.5", optional = true }
embedded-alloc = { version = "0.7.0", optional = true }
nrf52840-hal = { version = "0.19.0", optional = true }
riscv = { version = "0.16.0", features = ["critical-section-single-hart"], optional = true }
riscv-rt = { version = "0.17.0", optional = true }
semihosting = { version = "0.1.21", features = ["panic-handler", "stdio"], optional = true }
wasefire-common = { version = "0.1.1-git", path = "../common", optional = true }
wasefire-sync = { version = "0.1.3-git", path = "../sync", optional = true }

[dependencies.wasmtime]
version = "40.0.0"
default-features = false
features = ["async", "runtime"]
optional = true

[dependencies.wasefire-interpreter]
path = "../interpreter"
features = ["float-types"]
optional = true

[build-dependencies.wasmtime]
version = "40.0.0"
default-features = false
features = ["cranelift", "pulley"]
optional = true

[build-dependencies.wasefire-interpreter]
path = "../interpreter"
features = ["float-types"]
optional = true

[features]
_target-embedded = [
  "dep:embedded-alloc",
  "dep:semihosting",
  "dep:wasefire-common",
  "dep:wasefire-sync",
  "wasmtime?/pulley",
]
runtime-base = ["dep:wasefire-interpreter"]
runtime-wasmtime = ["dep:wasefire-sync", "dep:wasmtime"]
target-linux = ["wasmtime?/cranelift"]
target-nordic = ["_target-embedded", "dep:cortex-m", "dep:cortex-m-rt", "dep:nrf52840-hal"]
target-riscv = [
  "_target-embedded",
  "dep:riscv",
  "dep:riscv-rt",
  "wasefire-sync?/unsafe-assume-single-core",
]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.release.package.wasmtime]
opt-level = "z"

[profile.release.package.pulley-interpreter]
opt-level = 3

[profile.release.package.wasefire-interpreter]
opt-level = 3

[profile.release-size]
inherits = "release"
opt-level = "z"

[lints]
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
