[package]
name = "webui"
version = "0.1.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
anyhow = "1.0.100"
data-encoding = "2.10.0"
futures-util = "0.3.31"
gloo = { version = "0.11.0", features = ["futures"] }
js-sys = "0.3.85"
wasefire-common = { path = "../common" }
wasefire-error = { path = "../error" }
wasefire-protocol = { path = "../protocol", features = ["host"] }
wasefire-protocol-usb = { path = "../protocol-usb" }
wasefire-wire = { path = "../wire" }
web-sys = "0.3.85"
webusb-web = "0.4.1"
yew = { version = "0.22.0", features = ["csr"] }
yew-autoprops = "0.4.1"

[lints]
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
