[package]
name = "wasefire-wire-derive"
version = "0.1.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2021"
description = "Wasefire wire format derive macros"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "framework", "no-std"]
categories = ["embedded", "no-std"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.0", default-features = false }
quote = { version = "1.0.0", default-features = false }

[dependencies.syn]
version = "2.0.0"
default-features = false
features = [
  "clone-impls",
  "derive",
  "extra-traits",
  "full",
  "parsing",
  "printing",
  "proc-macro",
  "visit-mut",
]

[dev-dependencies]
prettyplease = "0.2.20"
similar-asserts = "1.5.0"

[features]
_dev = []
schema = []

[lints]
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unsafe-op-in-unsafe-fn = "warn"
rust.unused-crate-dependencies = "warn"
