[package]
name = "wasefire-wire-derive"
version = "0.1.3-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Wasefire wire format derive macros"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "framework", "no-std"]
categories = ["embedded", "no-std"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.101", default-features = false }
quote = { version = "1.0.41", default-features = false }

[dependencies.syn]
version = "2.0.106"
default-features = false
features = [
  "clone-impls",
  "derive",
  "extra-traits",
  "full",
  "parsing",
  "printing",
  "proc-macro",
  "visit-mut",
]

[dev-dependencies]
prettyplease = "0.2.37"
similar-asserts = "1.7.0"

[features]
_dev = []
schema = []

[lints]
clippy.literal-string-with-formatting-args = "allow"
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
