[package]
name = "wasefire-wire"
version = "0.1.2-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Wasefire wire format"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "framework", "no-std"]
categories = ["embedded", "no-std"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
wasefire-common = { version = "0.1.0-git", path = "../common" }
wasefire-error = { version = "0.1.3-git", path = "../error" }
wasefire-wire-derive = { version = "0.1.2-git", path = "../wire-derive" }

[features]
schema = ["std", "wasefire-wire-derive/schema"]
std = []

[lints]
clippy.literal-string-with-formatting-args = "allow"
clippy.mod-module-files = "warn"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
