[package]
name = "wasefire-wire"
version = "0.1.3"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Wasefire wire format"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "framework", "no-std"]
categories = ["embedded", "no-std"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
wasefire-common = { version = "0.1.1", path = "../common" }
wasefire-error = { version = "0.1.4", path = "../error" }
wasefire-wire-derive = { version = "0.1.3", path = "../wire-derive" }

[features]
schema = ["std", "wasefire-wire-derive/schema"]
std = []

[lints]
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
