[package]
name = "xtask"
version = "0.1.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
data-encoding = "2.9.0"
env_logger = "0.11.8"
libc = "0.2.177"
log = "0.4.28"
object = "0.37.3"
rustc-demangle = "0.1.26"
serde = { version = "1.0.228", features = ["derive"] }
serialport = "4.8.1"
stack-sizes = "0.5.0"
tokio = { version = "1.48.0", features = ["full"] }
wasefire-cli-tools = { path = "../cli-tools", features = ["action", "changelog"] }
wasefire-error = { path = "../error", features = ["std"] }

[lints]
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unused-crate-dependencies = "warn"
