[package]
name = "xtask"
version = "0.1.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
data-encoding = "2.10.0"
env_logger = "0.11.8"
libc = "0.2.180"
log = "0.4.29"
object = "0.38.1"
rustc-demangle = "0.1.27"
serde = { version = "1.0.228", features = ["derive"] }
serialport = "4.7.3"
stack-sizes = "0.5.0"
tokio = { version = "1.49.0", features = ["full"] }
wasefire-cli-tools = { path = "../cli-tools", features = ["action", "changelog"] }
wasefire-error = { path = "../error", features = ["std"] }

[lints]
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unused-crate-dependencies = "warn"
