[package]
name = "wasefire-protocol-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
wasefire-error.path = "../../error"
wasefire-protocol.path = ".."

[[bin]]
bench = false
doc = false
name = "request"
path = "fuzz_targets/request.rs"
test = false

[[bin]]
bench = false
doc = false
name = "response"
path = "fuzz_targets/response.rs"
test = false
