[package]
name = "wasefire-protocol-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
wasefire-protocol.path = ".."

[[bin]]
bench = false
doc = false
name = "request"
path = "fuzz_targets/request.rs"
test = false

[[bin]]
bench = false
doc = false
name = "response"
path = "fuzz_targets/response.rs"
test = false

[lints]
clippy.unit-arg = "allow"
rust.unsafe-op-in-unsafe-fn = "warn"
